[gd_scene load_steps=6 format=2]

[ext_resource path="res://Camera2D.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 8 )

[node name="Camera2D" type="Camera2D"]
position = Vector2( 160, 90 )
current = true
smoothing_enabled = true
script = ExtResource( 1 )

[node name="Limits" type="Node" parent="."]

[node name="TopLeft" type="Position2D" parent="Limits"]

[node name="BottomRight" type="Position2D" parent="Limits"]
position = Vector2( 320, 180 )

[node name="Barriers" type="Node" parent="."]

[node name="TopBarrier" type="StaticBody2D" parent="Barriers"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barriers/TopBarrier"]
position = Vector2( 160, -8 )
shape = SubResource( 1 )

[node name="BottomBarrier" type="StaticBody2D" parent="Barriers"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barriers/BottomBarrier"]
position = Vector2( 160, 188 )
shape = SubResource( 2 )

[node name="LeftBarrier" type="StaticBody2D" parent="Barriers"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barriers/LeftBarrier"]
position = Vector2( -8, 88 )
shape = SubResource( 3 )

[node name="RightBarrier" type="StaticBody2D" parent="Barriers"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barriers/RightBarrier"]
position = Vector2( 328, 88 )
shape = SubResource( 4 )
